; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_filebuf.c_test_core_filebuf__1.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_filebuf.c_test_core_filebuf__1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_FILEBUF_INIT = common dso_local global i32 0, align 4
@__const.test_core_filebuf__1.test = private unnamed_addr constant [5 x i8] c"test\00", align 1
@.str = private unnamed_addr constant [15 x i8] c"libgit2 rocks\0A\00", align 1
@GIT_FILEBUF_APPEND = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@.str.2 = private unnamed_addr constant [14 x i8] c"libgit2 rocks\00", align 1
@.str.3 = private unnamed_addr constant [29 x i8] c"libgit2 rocks\0Alibgit2 rocks\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_core_filebuf__1() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [5 x i8], align 1
  %3 = load i32, i32* @GIT_FILEBUF_INIT, align 4
  store i32 %3, i32* %1, align 4
  %4 = bitcast [5 x i8]* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %4, i8* align 1 getelementptr inbounds ([5 x i8], [5 x i8]* @__const.test_core_filebuf__1.test, i32 0, i32 0), i64 5, i1 false)
  %5 = getelementptr inbounds [5 x i8], [5 x i8]* %2, i64 0, i64 0
  %6 = call i32 @cl_git_mkfile(i8* %5, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %7 = getelementptr inbounds [5 x i8], [5 x i8]* %2, i64 0, i64 0
  %8 = load i32, i32* @GIT_FILEBUF_APPEND, align 4
  %9 = call i32 @git_filebuf_open(i32* %1, i8* %7, i32 %8, i32 438)
  %10 = call i32 @cl_git_pass(i32 %9)
  %11 = call i32 @git_filebuf_printf(i32* %1, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0))
  %12 = call i32 @cl_git_pass(i32 %11)
  %13 = call i32 @git_filebuf_commit(i32* %1)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = getelementptr inbounds [5 x i8], [5 x i8]* %2, i64 0, i64 0
  %16 = call i32 @cl_assert_equal_file(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.3, i64 0, i64 0), i32 0, i8* %15)
  %17 = getelementptr inbounds [5 x i8], [5 x i8]* %2, i64 0, i64 0
  %18 = call i32 @p_unlink(i8* %17)
  %19 = call i32 @cl_must_pass(i32 %18)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_mkfile(i8*, i8*) #2

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_filebuf_open(i32*, i8*, i32, i32) #2

declare dso_local i32 @git_filebuf_printf(i32*, i8*, i8*) #2

declare dso_local i32 @git_filebuf_commit(i32*) #2

declare dso_local i32 @cl_assert_equal_file(i8*, i32, i8*) #2

declare dso_local i32 @cl_must_pass(i32) #2

declare dso_local i32 @p_unlink(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
